--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,15 @@
 
     <dependencies>
         <!-- mirai -->
+        <!--        <dependency>-->
+        <!--            <groupId>net.mamoe</groupId>-->
+        <!--            <artifactId>mirai-core-jvm</artifactId>-->
+        <!--            <version>2.6.2</version>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>net.mamoe</groupId>
             <artifactId>mirai-core-jvm</artifactId>
-            <version>2.6.2</version>
+            <version>2.7.1-dev-1</version>
         </dependency>
 
     </dependencies>
